# ecs171-imdb-boxoffice-prediction

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  meetingLogs.md  meeting_logs.md  pyproject.toml  requirements.txt
artifacts/: final_model.pkl
data/: .gitignore
notebooks/: andrew_tmdb_baseline.ipynb  final_model_rf_comparison.ipynb  final_model_week4.ipynb  random_forest_pr_curve.ipynb
notebooks/artifacts/: final_model_with_popularity.pkl
notebooks/finalModelEvaluation/: final_model_LR_comparison.ipynb  final_model_improvements_test.ipynb  final_model_rf_comparison.ipynb  final_model_week4.ipynb  generate_presentation_figures.ipynb
notebooks/finalModelEvaluation/artifacts/: final_model.pkl
notebooks/modelTesting/: andrew_tmdb_baseline.ipynb  eda_figures.ipynb  gradient_boosting_classifier_pr_curve.ipynb  logan_eval_track.ipynb
reports/alex_week3_outputs/: ablation_comparison.csv
reports/logan/: logan_metrics.md
reports/week3ProgressReportInformation/alex_week3_outputs/: alex_week3_writeup.md  prerelease_comparison.csv
reports/week3ProgressReportInformation/week_3_interpretations_andrew/: week3_analysis.md
scripts/: alex-week3.py
scripts/alex/week1/: alex-week1.py
scripts/alex/week3/alex_week3_outputs/: feature_importances.csv
scripts/alex/week4/: preprocess_tmdbweek4.py
webapp/: README.md  app.py  preprocessing.py
webapp/static/: style.css
webapp/templates/: index.html
